Bug 113784 - Crash: Right click cell on Data Provider dialog
Summary: Crash: Right click cell on Data Provider dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:6.0.0
Keywords: haveBacktrace
Depends on:
Blocks: Data-Provider
  Show dependency treegraph
 
Reported: 2017-11-12 13:28 UTC by sawakaze
Modified: 2021-03-25 01:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencapture (60.50 KB, image/png)
2017-11-12 13:32 UTC, sawakaze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sawakaze 2017-11-12 13:28:15 UTC
Description:
After Data Provider, right click on cell -> application crash 

Steps to Reproduce:
1.open Data Provider. (Data > Data Provider
2.Right click cell 
-> application crash

Actual Results:  
crash.

Expected Results:
not crash and open dialog.


Reproducible: Always


User Profile Reset: No



Additional Info:
my test env.

OS: Ubuntu MATE x64
Lang : Japanese

version:
version: 6.0.0.0.alpha1+
Build ID: 4c656c82ccdaa47cf447dfff4147b339b44ea8c1
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-11-11_22:18:01
locale: ja-JP (ja_JP.UTF-8); Calc: group


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:56.0) Gecko/20100101 Firefox/56.0
Comment 1 sawakaze 2017-11-12 13:32:21 UTC
Created attachment 137690 [details]
Screencapture
Comment 2 Xavier Van Wijmeersch 2017-11-12 14:51:03 UTC
Confirm with fresh build off today 14:00h

Version: 6.0.0.0.alpha1+
Build ID: 3ca4d1169c1b6d35eecc980251d6d89ff120ee70
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 3 Xisco Faulí 2017-11-12 16:45:15 UTC
Reproduced in

Version: 6.0.0.0.alpha1+
Build ID: b73c66597884f03443ee8888cb6c204b78bb6cda
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: th-TH (ca_ES.UTF-8); Calc: group
Comment 4 Julien Nabet 2017-11-12 16:49:28 UTC
Relevant part on bt:
#0  0x00007fffc971096c in Point::X() const (this=0x0) at /home/julien/lo/libreoffice/include/tools/gen.hxx:77
#1  0x00007fffc9c67f92 in Point::getX() const (this=0x0) at /home/julien/lo/libreoffice/include/tools/gen.hxx:98
#2  0x00007fffca04ca9f in ScDataTableView::MouseButtonUp(MouseEvent const&) (this=0x555558afbed0, rMEvt=...)
    at /home/julien/lo/libreoffice/sc/source/ui/miscdlgs/datatableview.cxx:242
#3  0x00007fffec27a127 in ImplHandleMouseEvent(VclPtr<vcl::Window> const&, MouseNotifyEvent, bool, long, long, unsigned long, unsigned short, MouseEventModifiers) (xWindow=
    ..., nSVEvent=MouseNotifyEvent::MOUSEBUTTONUP, bMouseLeave=false, nX=167, nY=115, nMsgTime=31420860, nCode=4, nMode=MouseEventModifiers::NONE)
    at /home/julien/lo/libreoffice/vcl/source/window/winproc.cxx:707
#4  0x00007fffec2813fa in ImplHandleSalMouseButtonUp(vcl::Window*, SalMouseEvent const*) (pWindow=0x555558ae2c90, pEvent=0x7fffffff10f0)
    at /home/julien/lo/libreoffice/vcl/source/window/winproc.cxx:1997
Comment 5 Julien Nabet 2017-11-12 17:25:24 UTC
I submitted patch on gerrit:
https://gerrit.libreoffice.org/#/c/44651/
Comment 6 Commit Notification 2017-11-12 18:36:49 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=39ba5cbd8ca491aa322f48569ee5c10248e6e94b

tdf#113784: fix crash when right click on data provider dialog

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2017-11-12 18:46:29 UTC
Markus: I did like ScDataTableView::MouseButtonDown, 
190 if (!rMEvt.IsLeft())
191 return;

The result is right click does nothing at all.
So the crash is fixed but am not sure if it's the right behavior.