tdf#113784: fix crash when right click on data provider dialog

Do like ScDataTableView::MouseButtonDown
    188 void ScDataTableView::MouseButtonDown(const MouseEvent& rMEvt)
    189 {
    190     if (!rMEvt.IsLeft())
    191         return;
...

See bt:
0  0x00007fffc971096c in Point::X() const (this=0x0) at /home/julien/lo/libreoffice/include/tools/gen.hxx:77
1  0x00007fffc9c67f92 in Point::getX() const (this=0x0) at /home/julien/lo/libreoffice/include/tools/gen.hxx:98
2  0x00007fffca04ca9f in ScDataTableView::MouseButtonUp(MouseEvent const&) (this=0x555558afbed0, rMEvt=...)
    at /home/julien/lo/libreoffice/sc/source/ui/miscdlgs/datatableview.cxx:242

Change-Id: Ia124dcec698438b51072956949e3274a8e3f77c5